# Rust-JWT-App

./: .env.example  .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/endpoints/: index.rs  login.rs  mod.rs  register.rs
