[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
rocket_db_pools = { version = "0.2.0", features = ["sqlx_sqlite"] }
sqlx = { version = "0.7", default-features = false, features = ["macros", "migrate"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = "1.43.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
chrono = "0.4.39"
